--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,17 +24,20 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
-models:
+models:  
+  +pre-hook: "{{ insert_transform_log() }}"
+  +post-hook: 
+    - "{{ insert_students() }}"
+    - "{{ update_transform_log() }}"
   test_dbt_mysql:
     transform:
-      +materialized: table
+      +materialized: table      
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
