--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,7 +37,7 @@ models:
     - "{{ update_transform_log() }}"
   test_dbt_mysql:
     transform:
-      +materialized: incremental      
+      +materialized: table      
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
